--- a/index.html
+++ b/index.html
@@ -21,5 +21,72 @@
     </header>
 
     <h1>BloomPetals</h1>
+    <main>
+        <section class="container-intro">
+            <p>Chez BloomPetals, nous croyons que chaque célébration mérite d'être parée de la beauté
+                naturelle des fleurs. Nous sommes une entreprise passionnée et créative spécialisée dans
+                la confection de magnifiques bouquets floraux pour embellir vos événements spéciaux. Que
+                ce soit un mariage, un anniversaire, une réception ou toute autre occasion festive, nos
+                artisans floraux talentueux travaillent avec dévouement pour créer des arrangements
+                uniques et époustouflants qui émerveilleront vos invités</p>
+        </section>
+    
+        <section class="container-pics">
+            <img src="./assets/images/image5.jpg" alt="">
+            <img src="./assets/images/image4.jpg" alt="">
+            <img src="./assets/images/image1.jpg" alt="">
+        </section>
+
+        <section class="container-services">
+            <div class="services">
+                <div class="services-title">
+                    
+                    <p> <img class="checkmark" src="./assets/images/check-mark.png" alt="checkmark"> Création de bouquets personnalisés</p>
+                </div>
+                <div>
+                    <p>BloomPetals offre un service de création de
+                    bouquets floraux entièrement personnalisés pour toutes les occasions. Que ce soit pour un
+                    mariage élégant, un anniversaire chaleureux ou un événement d'entreprise sophistiqué,
+                    notre équipe d'artisans floraux talentueux travaille en étroite collaboration avec les clients.
+                    pour concevoir des arrangements sur mesure, adaptés à leurs goûts et à l'ambiance de
+                    l'événement.</p>
+                </div>
+                <div><a href="#">En savoir plus</a></div>
+            </div>
+
+            <div class="services">
+                <div class="services-title">
+                    <p><img class="checkmark" src="./assets/images/check-mark.png" alt="checkmark"> Décoration Florale d'Événements</p>
+                </div>
+                <div>
+                    <p> Notre équipe de professionnels se spécialise dans
+                    la décoration florale d'événements. Nous transformons les lieux de fêtes en espaces
+                    enchanteurs en utilisant des fleurs fraîches et luxuriantes. Des centres de table élégants aux
+                    arches florales majestueuses, nous concevons des décors floraux qui éblouissent et
+                    captivent les invités. Notre service comprend également la livraison, l'installation et la
+                    décoration sur place pour garantir une expérience sans stress pour nos clients.</p>
+                </div>
+                <div><a href="#">En savoir plus</a></div>
+            </div>
+
+            <div class="services">
+                <div class="services-title">
+                    <p><img class="checkmark" src="./assets/images/check-mark.png" alt="checkmark"> Ateliers de Composition Florale</p>
+                </div>
+                <div>
+                    <p>En plus de nos services de décoration et de création
+                    de bouquets, BloomPetals propose des ateliers de composition florale interactifs. Ces
+                    ateliers sont parfaits pour les amateurs de fleurs et les passionnés de design floral. Nos
+                    experts partagent leurs connaissances et leurs compétences, guidant les participants dans
+                    la création de leurs propres arrangements floraux. C'est une expérience enrichissante et
+                    ludique, idéale pour les événements d'entreprise, les enterrements de vie de jeune fille ou
+                    les fêtes privées. Les participants repartent avec leurs créations florales uniques et des
+                    souvenirs mémorables de l'atelier.</p>
+                </div>
+                <div><a href="#">En savoir plus</a></div>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
