--- a/entreprises.html
+++ b/entreprises.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="entreprise.html">Entreprise</a></li>
                 <li><a href="realisations.html">Réalisations</a></li>
                 <li><a href="contact.html">Contact</a></li>
